--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^3.3.3",
+    "webpack": "^5.99.6",
+    "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
